log/build_2026-04-01_18-01-23/turtle_spiral/stderr.log
  File "/home/tejasarjuna/Learning_phase/install/turtle_spiral/lib/python3.10/site-packages/turtle_spiral/turtle_spiral.py", line 2
    from rclpy.node Node
                    ^^^^
SyntaxError: invalid syntax

